force-app/main/default/objects/Book__c/Book__c.object-meta.xml
<CustomObject>
    <label>Book</label>
    <nameField>
        <displayFormat>BK-{0}</displayFormat>
        <label>BookName</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Book</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>