force-app/main/default/objects/Book__c/fields/BookAuthor__c.field-meta.xml
<CustomField>
    <fullName>BookAuthor__c</fullName>
    <label>BookAuthor</label>
    <length>25</length>
    <type>Text</type>
</CustomField>