force-app/main/default/objects/Book__c/fields/BookISBN__c.field-meta.xml
<CustomField>
    <fullName>BookISBN__c</fullName>
    <label>BookISBN</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>