force-app/main/default/objects/Book__c/fields/BookPrice__c.field-meta.xml
<CustomField>
    <fullName>BookPrice__c</fullName>
    <label>BookPrice</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>