force-app/main/default/objects/Book__c/fields/BookType__c.field-meta.xml
<CustomField>
    <fullName>BookType__c</fullName>
    <label>BookType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Novel</fullName>
            </value>
            <value>
                <fullName>Story</fullName>
            </value>
            <value>
                <fullName>Bio</fullName>
            </value>
            <value>
                <fullName>Docu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>