force-app/main/default/objects/Book__c/fields/Publisher__c.field-meta.xml
<CustomField>
    <fullName>Publisher__c</fullName>
    <label>Publisher</label>
    <length>25</length>
    <type>Text</type>
</CustomField>