force-app/main/default/objects/Book__c/fields/TotalCopies__c.field-meta.xml
<CustomField>
    <fullName>TotalCopies__c</fullName>
    <label>TotalCopies</label>
    <summaryForeignKey>CopyDetails__c.RelatedBook__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>