force-app/main/default/objects/Book__c/validationRules/BookAuthorValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>BookAuthorValidation</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(BookAuthor__c)</errorConditionFormula>
    <errorMessage>Book Author is required</errorMessage>
</ValidationRule>