force-app/main/default/objects/Book__c/validationRules/BookPriceValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>BookPriceValidation</fullName>
    <active>true</active>
    <errorConditionFormula>OR (BookPrice__c &lt; 500, BookPrice__c &gt; 5000)</errorConditionFormula>
    <errorMessage>Book price should be between 500 to 5000</errorMessage>
</ValidationRule>