force-app/main/default/objects/Book__c/validationRules/BookPriceValidation1.validationRule-meta.xml
<ValidationRule>
    <fullName>BookPriceValidation1</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(BookPrice__c)</errorConditionFormula>
    <errorMessage>Book price cannot be empty</errorMessage>
</ValidationRule>