force-app/main/default/objects/Book__c/validationRules/BookPriceValidation2.validationRule-meta.xml
<ValidationRule>
    <fullName>BookPriceValidation2</fullName>
    <active>true</active>
    <errorConditionFormula>BookPrice__c &lt;= 0</errorConditionFormula>
    <errorMessage>Book Price Cannot be negative</errorMessage>
</ValidationRule>